turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:28: error: ':' expected but ',' found.
	def NextMove(state, c, rule) {
                          ^Turmite:43: error: identifier expected but '}' found.
} 
^